@@ -1,113 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <includes> 
-	<!-- hidden library stat labels -->
-	<include name="HiddenLibraryStats">
-		<control type="group" id="16">
-			<visible>!Skin.HasSetting(HideLibraryStats) + [StringCompare(Container(20).ListItem.Property(defaultID),movies) | StringCompare(Container(20).ListItem.Property(defaultID),music) | StringCompare(Container(20).ListItem.Property(defaultID),tvshows)]</visible>
-			<control type="label" id="17">
-				<label>$VAR[LibraryInfoLabel]</label>			
-				<include>TopButton</include>
-			</control>
-			<control type="label" id="18">
-				<label>$VAR[LibraryInfoLabel2]</label>
-				<include>TopButton</include>
-			</control>
-			<control type="label" id="19">
-				<label>$VAR[LibraryInfoLabel3]</label>
-				<include>TopButton</include>
-			</control>
-		</control>
-	</include>
 
-	<!-- library stats vertical menu param defintions -->
-	<include name="ParamLibraryStatsVerticalMenu">
-		<control type="group">
-			<animation type="Conditional" condition="!IsEmpty(Window(Home).Property(WidgetHasFocus))" reversible="false">   
-				<effect type="fade" start="100" end="0" time="250" tween="sine" easing="inout" />
-			</animation>	
-			<animation type="Conditional" condition="IsEmpty(Window(Home).Property(WidgetHasFocus))" reversible="false">
-				<effect type="fade" delay="480" start="0" end="100" time="300" tween="sine" easing="in"  />
-			</animation>	
-			<visible>!Skin.HasSetting(HideWidgetLibraryStats) + !IsEmpty(Control.GetLabel(17))</visible>
-			<top>510</top>
-			<left>7</left>
-			<width>1235</width>
-			<control type="label">				
-				<width>1235</width>
-				<height>18</height>
-				<textcolor>white</textcolor>
-				<shadowcolor>55000000</shadowcolor>
-				<font>FontSize_30</font>
-				<align>left</align>			
-				<label>$PARAM[Headline]</label>										
-				<scroll>false</scroll>			
-			</control>
-		</control>
-	</include>
-	<!-- library stats vertical menu param content defintions -->
-	<include name="ParamLibraryStatsVerticalMenuContent">
-		<control type="group">
-			<animation type="Conditional" condition="!IsEmpty(Window(Home).Property(WidgetHasFocus))" reversible="false">   
-				<effect type="fade" start="100" end="0" time="250" tween="sine" easing="inout" />
-			</animation>	
-			<animation type="Conditional" condition="IsEmpty(Window(Home).Property(WidgetHasFocus))" reversible="false">
-				<effect type="fade" delay="480" start="0" end="100" time="300" tween="sine" easing="in"  />
-			</animation>	
-			<visible>!Skin.HasSetting(HideWidgetLibraryStats) + !IsEmpty(Control.GetLabel(17))</visible>
-			<top>510</top>
-			<left>7</left>
-			<width>1235</width>
-			<control type="label">	
-				<top>31</top>
-				<left>0</left>
-				<width>1235</width>
-				<height>18</height>
-				<textcolor>77white</textcolor>
-				<shadowcolor>55000000</shadowcolor>
-				<font>FontSize_20</font>
-				<align>left</align>			
-				<label fallback="195">$PARAM[Label]</label>				
-			</control>
-		</control>
-	</include>
+
 	
-	<!-- custom widget path -->
-	<include name="widgetgroup-custompath">
-		<content limit="$PARAM[Limit]" target="$PARAM[Target]">$INFO[Skin.String(CustomWidgetPath$PARAM[GroupNo].List)]</content>
-	</include>
-
-	<!-- custom widget group -->
-	<include name="widgetgroup-customgroup">
-		<content>
-			<include>skinshortcuts-group-widgetgroup$PARAM[GroupNo]</include>
-		</content>
-	</include>
-
-	<!-- item counter -->
-	<include name="widgetItemCounter">
-		<control type="label">
-			<left>$PARAM[left]</left>
-			<top>216</top>
-			<width>1280</width>
-			<height>70</height>
-			<aligny>top</aligny>
-			<align>$PARAM[align]</align>			
-			<textcolor>77white</textcolor>
-			<shadowcolor>55000000</shadowcolor>
-			<font>FontSize_16</font>							
-			<include>VisibleFadeEffect4</include>			
-		</control>
-	</include>
-
-	<!-- arrows -->
-	<include name="ArrowDimension">
-		<left>150</left>
-		<top>337</top>
-		<width>828</width>
-		<height>25</height>
-	</include>
-	<include name="ArrowWidth">
-		<left>956</left>
-	</include>
+	
 
 </includes>
